# nvidia-libs

./: .gitmodules  LICENSE  README.md  Readme_nvml.txt  bottles_setup.sh  build-wine32.txt  build-wine64.txt  meson.build  meson_options.txt  nvml_setup.sh  package-release.sh  proton_setup.sh  setup_nvlibs.sh
.github/workflows/: artifacts.yml
dlls/: meson.build
dlls/cudart_3/: cudart.c  cudart.h  cudart.rc  cudart.spec  meson.build
dlls/cufft_11/: cufft.c  cufft.h  cufft.rc  cufft.spec  meson.build
dlls/nvcuda/: Makefile.in  encryption.c  encryption.h  function_mappings.c  function_mappings.h  internal.c  meson.build  nvcuda.c  nvcuda.h  nvcuda.rc  nvcuda.spec
dlls/nvcuvid/: meson.build  nvcuvid.c  nvcuvid.rc  nvcuvid.spec
dlls/nvencodeapi/: meson.build  nvencodeapi.c  nvencodeapi.rc  nvencodeapi.spec
dlls/nvencodeapi64/: meson.build  nvencodeapi64.rc
dlls/nvml/: config.h  meson.build  nvml.c  nvml.rc  nvml.spec
include/: config.h  cuda.h  cuviddec.h  nvcuvid.h  nvencodeapi.h  winnt.h
include/wine/: list.h  server_protocol.h
